@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class EspecificarServicoUI <<presentation>>
class EspecificarServicoController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class CatalogoRepository <<repository>>
class FormularioRepository <<repository>>
class ServicoRepository <<repository>>
class Servico <<domain>>
class Formulario <<domain>>
class ServicoBuilder <<builder>>



EspecificarServicoUI --> EspecificarServicoController
EspecificarServicoController : listCatalogo()
EspecificarServicoController : novoFormulario(nome,nomeVariavel,etiqueta,descricaoAjuda,tipoDados,expressaoRegular)

EspecificarServicoController : especificarServico(descricaoBreve,descricaoCompleta,icone,título,codigoUnico,catalogo,form)

EspecificarServicoController --> CatalogoRepository
EspecificarServicoController --> ServicoRepository
EspecificarServicoController --> PersistenceContext
EspecificarServicoController --> FormularioRepository
EspecificarServicoController --> ServicoBuilder

ServicoBuilder --> Formulario
ServicoBuilder --> Servico

PersistenceContext --> RepositoryFactory

RepositoryFactory --> FormularioRepository
RepositoryFactory --> CatalogoRepository
RepositoryFactory --> ServicoRepository

PersistenceContext : repositories()

FormularioRepository : create()
FormularioRepository : save(form)

ServicoRepository : create()
ServicoRepository : save(newServico)

CatalogoRepository : create()
CatalogoRepository : findAll()

ServicoBuilder : withDescricaoBreve()
ServicoBuilder : withDescricaoCompleta()
ServicoBuilder : withIcone()
ServicoBuilder : withTitulo()
ServicoBuilder : withCodigoUnico()
ServicoBuilder : withCatalogo()
ServicoBuilder : withFormulario()

@enduml